@@ -1,3 +1,8 @@
+2012-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* otp-lexer.l: Added the never-interactive option to prevent
+	flex from creating a problematic prototype for isatty().
+
 2011-05-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* mkofm: Replace `$*' by `"$@"'.
